[gd_scene load_steps=13 format=3 uid="uid://cmse4u4a1rwsk"]

[ext_resource type="Script" path="res://Scripts/enemy1_possesed.gd" id="1_rxhwj"]
[ext_resource type="PackedScene" uid="uid://314byjv3jur5" path="res://Scenes/bulletPlayer.tscn" id="2_v4lpb"]
[ext_resource type="PackedScene" uid="uid://dxxkp8ynemrxi" path="res://Scenes/flash.tscn" id="3_5puri"]
[ext_resource type="PackedScene" uid="uid://clg1b5o4a50kf" path="res://Models/test_soldier_possessed.tscn" id="3_febnf"]
[ext_resource type="Texture2D" uid="uid://ds6gt02kyarks" path="res://Assets/White_Circle.svg.png" id="3_kck78"]
[ext_resource type="ArrayMesh" uid="uid://biqyesxminuwo" path="res://Pruebas/muzzle_flash.obj" id="4_praq5"]
[ext_resource type="Shader" uid="uid://bnqwgryv7mvwa" path="res://Pruebas/Muzzle_flash.tres" id="5_knmks"]

[sub_resource type="Animation" id="Animation_k8wjg"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:surface_material_override/0:shader_parameter/FloatParameter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.25, 0.0, 0.6]
}

[sub_resource type="Animation" id="Animation_1lnew"]
resource_name = "slash"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:surface_material_override/0:shader_parameter/FloatParameter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.25, 0.0, 0.6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3bwn2"]
_data = {
"RESET": SubResource("Animation_k8wjg"),
"slash": SubResource("Animation_1lnew")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i3dnt"]
render_priority = 0
shader = ExtResource("5_knmks")
shader_parameter/ColorParameter = Color(0.929993, 0.468393, 0, 1)
shader_parameter/FloatParameter = -0.25

[sub_resource type="BoxShape3D" id="BoxShape3D_vgwi1"]
size = Vector3(1.5, 2.03494, 1.5)

[node name="EnemyPossese" type="CharacterBody3D"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
collision_mask = 6
script = ExtResource("1_rxhwj")
bullet = ExtResource("2_v4lpb")
flash = ExtResource("3_5puri")
cooldown = 0.5
damage_force = 20

[node name="Pivot" type="Node3D" parent="."]

[node name="Possessed" parent="Pivot" instance=ExtResource("3_febnf")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.304504, 0.150918)

[node name="BulletPoint" type="Node3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.232462, 2.49345, 2.17191)

[node name="Flash" type="Node3D" parent="Pivot"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -0.195866, 2.46046, 2.70829)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot/Flash"]
libraries = {
"": SubResource("AnimationLibrary_3bwn2")
}
speed_scale = 3.0

[node name="MuzzleFlash" type="MeshInstance3D" parent="Pivot/Flash"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.421432, -0.29274, 1.19209e-07, 0.487322)
mesh = ExtResource("4_praq5")
surface_material_override/0 = SubResource("ShaderMaterial_i3dnt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25573, 0)
shape = SubResource("BoxShape3D_vgwi1")

[node name="PossesTime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Decal" type="Decal" parent="."]
size = Vector3(1.6, 2, 1.6)
texture_albedo = ExtResource("3_kck78")
modulate = Color(0, 0, 0, 0.47451)

[node name="Damage_Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="PossesTime" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Damage_Timer" to="." method="_on_damage_timer_timeout"]
